--- a/src/Coms/Title/Title.module.css
+++ b/src/Coms/Title/Title.module.css
@@ -1,25 +1,31 @@
 .titleContainer {
-    text-align: center;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
     padding: 20px;
-    background-color: #f4f4f48a; /* Light background to make the text stand out */
-    border-bottom: 1px solid hsl(0, 0%, 87%); /* Underline for separation */
-    height: 70px;
-    width: 600px;
+    background-color: #ff8cec8a;
+    border-bottom: 1px solid hsl(0, 0%, 87%);
+    width: 100vw;
+}
+.Title{
+    font-family: cursive;
+    font-size: 131%;
 }
 
-.title {
-    font-size: 1.5em; /* Adjusted size for mobile */
-    color: #eb5ecc;
-    margin: 0;
-    font-family: 'Poppins', sans-serif; /* Optional: Add a custom font */
-}
 
 /* Media Query for Small Screens */
 @media (max-width: 600px) {
-    .title {
-        font-size: 1.2em; /* Smaller font size for smaller screens */
+    .titleContainer {
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 3rem;
+        padding: 20px;
+        /* background-color: #ff8cec8a; */
+        border-bottom: 1px solid hsl(0, 0%, 87%);
+        width: 100vw;
+    }
+    .Title{
+        font-family: cursive;
+        font-size: 131%;
     }
 }
