--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,6 +21,7 @@
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
+  background-color: #f8f8f8;
 }
 
 .description a {
@@ -42,6 +43,8 @@
 .code {
   font-weight: 700;
   font-family: var(--font-mono);
+  background-color: #f8f8f8;
+
 }
 
 .grid {
@@ -49,6 +52,8 @@
   grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
   width: var(--max-width);
+  background-color: #f8f8f8;
+
 }
 
 .card {
@@ -199,11 +204,12 @@
     inset: auto 0 0;
     padding: 2rem;
     height: 200px;
-    background: linear-gradient(
+    background-color: #f8f8f8;
+    /* background: linear-gradient(
       to bottom,
       transparent 0%,
       rgb(var(--background-end-rgb)) 40%
-    );
+    ); */
     z-index: 1;
   }
 }
